# milky-wiki

./: .gitignore  app.py  credits.py  db.py  dependencies.py  lifespan.py  package-lock.json  pyproject.toml  settings.py
controllers/: __init__.py  auth.py  category.py  glossary.py  note.py  project.py  user.py
middleware/: __init__.py  auth.py  db.py
models/schemas/: __init__.py  auth.py  glossary.py  notes.py  project.py  user.py
models/tables/: __init__.py  article.py  category.py  glossary.py  notes.py  project.py  user.py
service/: auth.py  base.py  category.py  glossary.py  note.py  project.py  user.py
utils/: auth.py
